--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
