--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-native-screens": "~4.4.0",
     "zustand": "^5.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-image-picker": "~16.0.6"
+    "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.8",
+    "expo-notifications": "~0.29.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
