--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,6 +6,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./app/*"]
-		}
+		},
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true
 	}
 }
