--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
+		"express-async-handler": "^1.2.0",
 		"express-rate-limit": "^7.5.0",
 		"express-validator": "^7.2.0",
 		"helmet": "^8.0.0",
@@ -47,6 +48,7 @@
 		"node-fetch": "^2.6.0",
 		"nodemailer": "^6.9.16",
 		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"unsplash-js": "^7.0.19",
 		"uuid": "^11.0.3"
 	}
