--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,15 @@
 {
-    "compilerOptions": {
-        "module": "NodeNext",
-        "moduleResolution": "nodenext",
-        "baseUrl": "src",
-        "outDir": "dist",
-        "strict": true,
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "target": "ES2015", // или выше
-        "downlevelIteration": true
-    },
-    "include": ["src/**/*"]
+	"compilerOptions": {
+		"module": "NodeNext",
+		"moduleResolution": "nodenext",
+		"esModuleInterop": true,
+		"baseUrl": "src",
+		"outDir": "dist",
+		"strict": true,
+		"sourceMap": true,
+		"noImplicitAny": true,
+		"target": "ES2015", // или выше
+		"downlevelIteration": true
+	},
+	"include": ["src/**/*"]
 }
