--- a/client/package.json
+++ b/client/package.json
@@ -10,31 +10,31 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.9.0",
-    "expo": "~52.0.35",
-    "expo-asset": "^11.1.5",
+    "expo": "~52.0.46",
+    "expo-asset": "~11.0.5",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.6",
     "expo-fast-image": "^1.1.3",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.8",
+    "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.20",
+    "expo-router": "~4.0.21",
     "expo-status-bar": "~2.0.1",
     "jotai": "^2.12.1",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-websocket": "^1.0.2",
-    "react-native-webview": "^13.13.5",
+    "react-native-webview": "13.12.5",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3"
   },
